# BasicNN

./: CMakeLists.txt  basic_nn.cpp  basic_nn.hpp  main.cpp  mnist_visualizer.py  progress_bar.hpp  threadpool.hpp  utils.cpp  utils.hpp
